# stu

./: .gitignore  README.md  chebyshev.py  environment.yml  pyproject.toml  spec-file.txt
spectral_ssm/: lds.py  train_polynomial_stu.py  train_stu.py  train_transformer.py
spectral_ssm/models/polynomial_stu/: __init__.py  cheby.py  config.json  model.py  train_stu.py
spectral_ssm/models/stu/: __init__.py  config.json  model.py
spectral_ssm/models/transformer/: __init__.py  config.json  model.py
spectral_ssm/plots/: plot_Z_T.py  plot_spectrum.py  visualize_filters.py
spectral_ssm/tests/: README.md  benchmark_cheby.py  bivariate_cheb_expansion.py  chebyshev.py  hankel.py  hankel2.py  hankel3.py  hankel4.py  test.py  test2.py  test3.py  test_ar.py  test_conv.py
