[project]
name = "spectral_ssm"
version = "1.0.0"
description = "The Spectral State Space Model from the Hazan Lab @ Princeton"
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = {file = "LICENSE"}

authors = [
    { name = "Windsor Nguyen", email = "mn4560@princeton.edu" },
]

maintainers = [
    { name = "Windsor Nguyen", email = "mn4560@princeton.edu" },
]

keywords = [
    "pytorch",
    "state space model",
    "spectral filtering",
    "deep learning",
    "machine learning",
    "dynamical systems",
    "language modeling",
]

classifiers = [
    "Intended Audience :: Researchers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "packaging==24.1",
    "wheel==0.44.0",
    "ruff>=0.9.6",
    "numpy==1.26.4",
    "ninja==1.11.1.1",
    "torch>=2.5.1",
    "triton>=3.1.0",
    "matplotlib==3.9.2",
    "flash-attn>=2.7.4",
]

[tool.setuptools]
packages = ["spectral_ssm"]

# ===============================
# Project URLs
# ===============================
[project.urls]
Homepage = "https://www.minregret.com/"
Repository = "https://github.com/hazan-lab/stu"

# ===============================
# Ruff Configuration
# ===============================
[tool.ruff]
# Exclude commonly ignored directories from linting
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# General Ruff settings
line-length = 88
indent-width = 4
target-version = "py312"

# -------------------------------
# Ruff Linting Rules
# -------------------------------
[tool.ruff.lint]
# Enable specific linting rules
select = ["E4", "E7", "E9", "F", "B", "Q"]
ignore = []

# Define fixable and unfixable rules
fixable = ["ALL"]
unfixable = []

# -------------------------------
# Ruff Flake8-Quotes Settings
# -------------------------------
[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"  # Enforce double quotes for docstrings
inline-quotes = "double"     # Enforce double quotes for inline strings

# -------------------------------
# Ruff Formatting Settings
# -------------------------------
[tool.ruff.format]
quote-style = "double"                  # Use double quotes for auto-formatting
indent-style = "space"                  # Indent with spaces instead of tabs
skip-magic-trailing-comma = false       # Respect magic trailing commas
line-ending = "auto"                    # Automatically detect line endings

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
